词法分析完成

--- a/docs/01.词法分析.md
+++ b/docs/01.词法分析.md
@@ -1,5 +1,7 @@
 # 1.词法分析
 
+[toc]
+
 ## 1.1 词法分析概述
 
 词法分析实际上的作用是将原本并无意义的字符串（我们的输入）转化为词素，生成并输出一个个词法单元。
@@ -50,7 +52,8 @@ addTwo(3);
 这玩意有点像我们的词典，但是不是给我们读的，而是要交给下一个步骤要实现的模块——词法分析器来读的。
 
 `./token/token.go`
-```
+
+```go
 package token
 
 type TokenType string
@@ -229,3 +232,281 @@ func TestNextToken(t *testing.T) {
 ```
 
 如预期一样，我们的测试通过了！
+
+但是还没办法开始休息，毕竟哪门语言只有括号啊？！
+
+我们继续添加新的词法单元和识别方法。
+
+## 1.4 这个解释器需要更多词法单元！
+
+首先如果要有变量，自然要先能够识别到`let`这个变量声明词法单元。
+
+我们先将其添加到`token.go`中
+
+```go
+package token
+
+type TokenType string
+
+const (
+	ILLEGAL = "ILLEGAL"
+	EOF     = "EOF"
+
+	PLUS     = "+"
+	MINUS    = "-"
+	ASTERISK = "*"
+	SLASH    = "/"
+
+
+	LPAREN   = "("
+	RPAREN   = ")"
+	LBRACE   = "{"
+	RBRACE   = "}"
+	LBRACKET = "["
+	RBRACKET = "]"
+
+	LET      = "LET"
+)
+
+type Token struct {
+	Type    TokenType
+	Literal string
+}
+```
+
+但是另外一个棘手的问题也出现了，按照我们刚刚的`lexer`的逻辑，我们得在`switch`中添加一个分支来识别`let`。
+
+可是我们只能识别一个字符！
+
+而且这个问题还必须解决，因为我们基本上所有的关键字，都并非单个字符，所以我们没办法在`case`对`l`这个字符单独识别，然后看看之后几个是不是`et`吧。
+
+同时我们还有例如`==、!=`等符号不仅仅由一个字符组成，所以我们就必须得对其进行特殊处理。
+
+于是我们引入了`peekChar()` 用于偷窥下一个字符的函数，有了这个函数，在遇到`=`、`!`时，我们就可以通过调用这个函数，从而判断它是否属于`==`和`!=`的情况了。
+
+但是对更多的字符的关键字，我们就没办法通过`peekChar()`来解决了，所以我们只能对`default`分支做手脚。
+
+我们先编写一个`map`用于存放我们的关键字，不仅仅是`let`，还有其他的我们所需要用到的关键字：
+
+```
+// 关键词集合
+var keywords = map[string]TokenType{
+	"fn":     FUNCTION,
+	"let":    LET,
+	"true":   TRUE,
+	"false":  FALSE,
+	"if":     IF,
+	"else":   ELSE,
+	"return": RETURN,
+}
+```
+
+编写关键字对应Token环节这里便按下不表了，相信有了之前的各种操作，大伙都能够将其复现出来。
+
+完成了这个，我们就能大大方方地对`default`分支做手脚了：
+
+- 首先如果我们遇到的是字母字符，则它大概率是个字面量or关键字，所以我们将其读取直到 遇到第一个非字母/数字字符。
+	这样子我们对于BY-Monkey语言的变量声明就有了一个基础的规定—— **禁止以数字开头** ！！！
+  - 接着再将其放入刚刚的`keywords`，看其是否在其中，就可以将其从变量与关键字分开。
+- 其次如果我们遇到的是数字字符，则它大概率是个数字，我们就一直读取到第一个非数字字符即可停止。
+
+完成了上述两个，如果还有其他的，那么就只剩下非法的情况了。
+
+至此，我们便完成了我们基础的词法分析器。
+
+## 1.5 必要的测试
+
+完成了基础代码的编写，我非常不好的习惯出现了，我总是习惯于先写代码再编写测试样例，实际上往往是先设计对应的测试样例，再来编写我们的代码会更具针对性一些，
+没事，就让我们任性这一次。
+
+我们继续试着编写一小段的`BY-Monkey`语言，然后写出其对应的每个词法单元，再将这段语言输入进我们刚刚编写的`lexer`，获得`lexer`所产出的词法单元，再挨个比较，我们就可以判断我们的代码是否出现纰漏。
+
+```
+let five = 5;
+let ten = 10;
+
+let add = fn(x, y){
+	x + y;
+};
+
+let result = add(five, ten);
+
+!-/*5;
+5 < 10 > 5;
+
+if (5 < 10) {
+	return true;
+} else {
+	return false;
+}
+
+10 == 10;
+10 != 9;
+
+"foobar"
+"foo bar"
+
+[1,2];
+{"foo": "bar"}
+```
+
+上面是一段看起来非常奇怪的代码，尽管其中有些部分在之后根本通过不了解释，但是没关系，我们所需要的并非是一段真正的代码，我们只需要
+将其对应的各个词法单元进行标注即可。
+
+
+`lexer_test.go`
+```
+package lexer
+
+import (
+	"Monkey/token"
+	"testing"
+)
+
+func TestNextToken(t *testing.T) {
+	input := `let five = 5;
+let ten = 10;
+
+let add = fn(x, y){
+	x + y;
+};
+
+let result = add(five, ten);
+
+!-/*5;
+5 < 10 > 5;
+
+if (5 < 10) {
+	return true;
+} else {
+	return false;
+}
+
+10 == 10;
+10 != 9;
+
+"foobar"
+"foo bar"
+
+[1,2];
+{"foo": "bar"}
+`
+
+	tests := []struct {
+		expectedType    token.TokenType
+		expectedLiteral string
+	}{
+		{token.LET, "let"},
+		{token.IDENT, "five"},
+		{token.ASSIGN, "="},
+		{token.INT, "5"},
+		{token.SEMICOLON, ";"},
+		{token.LET, "let"},
+		{token.IDENT, "ten"},
+		{token.ASSIGN, "="},
+		{token.INT, "10"},
+		{token.SEMICOLON, ";"},
+		{token.LET, "let"},
+		{token.IDENT, "add"},
+		{token.ASSIGN, "="},
+		{token.FUNCTION, "fn"},
+		{token.LPAREN, "("},
+		{token.IDENT, "x"},
+		{token.COMMA, ","},
+		{token.IDENT, "y"},
+		{token.RPAREN, ")"},
+		{token.LBRACE, "{"},
+		{token.IDENT, "x"},
+		{token.PLUS, "+"},
+		{token.IDENT, "y"},
+		{token.SEMICOLON, ";"},
+		{token.RBRACE, "}"},
+		{token.SEMICOLON, ";"},
+		{token.LET, "let"},
+		{token.IDENT, "result"},
+		{token.ASSIGN, "="},
+		{token.IDENT, "add"},
+		{token.LPAREN, "("},
+		{token.IDENT, "five"},
+		{token.COMMA, ","},
+		{token.IDENT, "ten"},
+		{token.RPAREN, ")"},
+		{token.SEMICOLON, ";"},
+		{token.BANG, "!"},
+		{token.MINUS, "-"},
+		{token.SLASH, "/"},
+		{token.ASTERISK, "*"},
+		{token.INT, "5"},
+		{token.SEMICOLON, ";"},
+		{token.INT, "5"},
+		{token.LT, "<"},
+		{token.INT, "10"},
+		{token.GT, ">"},
+		{token.INT, "5"},
+		{token.SEMICOLON, ";"},
+		{token.IF, "if"},
+		{token.LPAREN, "("},
+		{token.INT, "5"},
+		{token.LT, "<"},
+		{token.INT, "10"},
+		{token.RPAREN, ")"},
+		{token.LBRACE, "{"},
+		{token.RETURN, "return"},
+		{token.TRUE, "true"},
+		{token.SEMICOLON, ";"},
+		{token.RBRACE, "}"},
+		{token.ELSE, "else"},
+		{token.LBRACE, "{"},
+		{token.RETURN, "return"},
+		{token.FALSE, "false"},
+		{token.SEMICOLON, ";"},
+		{token.RBRACE, "}"},
+		{token.INT, "10"},
+		{token.EQ, "=="},
+		{token.INT, "10"},
+		{token.SEMICOLON, ";"},
+		{token.INT, "10"},
+		{token.NOT_EQ, "!="},
+		{token.INT, "9"},
+		{token.SEMICOLON, ";"},
+		{token.STRING, "foobar"},
+		{token.STRING, "foo bar"},
+		{token.LBRACKET, "["},
+		{token.INT, "1"},
+		{token.COMMA, ","},
+		{token.INT, "2"},
+		{token.RBRACKET, "]"},
+		{token.SEMICOLON, ";"},
+		{token.LBRACE, "{"},
+		{token.STRING, "foo"},
+		{token.COLON, ":"},
+		{token.STRING, "bar"},
+		{token.RBRACE, "}"},
+		{token.EOF, ""},
+	}
+
+	l := New(input)
+	for i, tt := range tests {
+		tok := l.NextToken()
+
+		if tok.Type != tt.expectedType {
+			t.Fatalf("tests[%d] - tokentype wrong. expected=%q, got=%q",
+				i, tt.expectedType, tok.Type)
+		}
+
+		if tok.Literal != tt.expectedLiteral {
+			t.Fatalf("tests[%d] - literal wrong. expected=%q, got=%q",
+				i, tt.expectedLiteral, tok.Literal)
+		}
+	}
+}
+
+```
+
+上述便是我们的测试代码了，很幸运，我们一次就通过了这个测试：
+
+```
+=== RUN   TestNextToken
+--- PASS: TestNextToken (0.00s)
+PASS
+```
